--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ p{
     font-size: x-large;
      font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    color: red;
 }
 .wallak{
     font-size: xx-large;
