--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ h1 {
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
     text-decoration: underline;
     font-weight: bolder;
+    color: red;
 }
 p{
     font-size: x-large;
