--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ p{
      font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
     color: red;
+    font-weight: bold;
 }
 .wallak{
     font-size: xx-large;
