--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ p{
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
     color: red;
     font-weight: bold;
+    text-shadow: black;
 }
 .wallak{
     font-size: xx-large;
