--- a/style.css
+++ b/style.css
@@ -13,9 +13,9 @@ p{
     font-size: x-large;
      font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-    color: red;
+    color: rgb(73, 71, 71);
     font-weight: bold;
-    text-shadow: black;
+   
 }
 .wallak{
     font-size: xx-large;
