--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ h1 {
     color: red;
 }
 p{
-    font-size: x-large;
+    font-size:medium;
      font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
     color: rgb(73, 71, 71);
