--- a/style.css
+++ b/style.css
@@ -13,9 +13,10 @@ p{
     font-size:medium;
      font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-    color: rgb(203, 222, 0);
+    color: rgb(98, 0, 255);
     font-weight: bold;
-   
+ text-shadow: 0 0 10px #fff,
+             0 0 20px #fff;
 }
 .wallak{
     font-size: xx-large;
