update html and css

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ p {
   font-size: medium;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  color: rgb(61, 131, 156);
+  color: #00b17f;
   font-weight: bold;
   text-shadow: 0 0 10px #fff, 0 0 20px #fff;
 }
