--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ p {
   font-size: small;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  color: #9568ff;
+  color: #3e3e3e;
   font-weight: bold;
   text-shadow: 0 0 10px #fff, 0 0 20px #fff;
 }
